// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be deleted 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      列表新增刪除功能
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <div
      class="list-group"
    />
  </div>
</div>
`;

exports[`should have blank in list 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      列表新增刪除功能
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <div
      class="list-group"
    >
      <button
        class="list-group-item"
        data-testid="button0"
      />
      <button
        class="list-group-item"
        data-testid="button1"
      >
        qwerty
      </button>
    </div>
  </div>
</div>
`;

exports[`should have list 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      列表新增刪除功能
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <div
      class="list-group"
    >
      <button
        class="list-group-item"
        data-testid="button0"
      >
        qwerty
      </button>
    </div>
  </div>
</div>
`;

exports[`should have lists 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      列表新增刪除功能
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <div
      class="list-group"
    >
      <button
        class="list-group-item"
        data-testid="button0"
      >
        zxcvbn
      </button>
      <button
        class="list-group-item"
        data-testid="button1"
      >
        qwerty
      </button>
    </div>
  </div>
</div>
`;

exports[`value should change 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      列表新增刪除功能
    </h2>
    <form
      class="input-group mb-3"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          todo
        </span>
      </div>
      <input
        class="form-control"
        data-testid="input"
      />
    </form>
    <div
      class="list-group"
    />
  </div>
</div>
`;
